# storeSimul3

./: .gitignore  README.md  docker-compose.yml
customers/: Dockerfile  requirements.txt
customers/customers/: main.py  models.py
dashboard/: .dockerignore  Dockerfile  build.ts  package.json
dashboard-api/: Dockerfile  api.py  requirements.txt
dashboard/src/: App.tsx  index.css  index.html  index.tsx
dashboard/src/components/: OrdersLineChart.tsx  ProductDepartmentPieChart.tsx  ProductSupplyResilienceChart.tsx  SupplierProductProportionChart.tsx  TopCustomersChart.tsx  charts.tsx
database/postgres-init/: 01_init_tables.sql  02_init_proceedures.sql
hello-world-server/: Dockerfile  server.py
orders/: .gitignore  Dockerfile  mix.exs
orders/config/: config.exs
orders/lib/orders/: application.ex  database_monitor.ex  heartbeat.ex  newOrder.ex  schemas.ex
products/: Dockerfile  build.sbt
products/src/main/scala/: app.scala  db.scala  model.scala
remote/: README.md  docker-compose.prod.yml
scripts/: build-and-push-all.sh  create-public-ecr-repos.sh
suppliers/: .envrc  CHANGELOG.md  Dockerfile  LICENSE  suppliers.cabal
suppliers/src-exe/: Main.hs
