cabal-version:      3.0
name:               suppliers
version:            0.1.0.0
author:             Hugo Ludemann
maintainer:         hugo.ludemann@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable suppliers
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0.0,
        postgresql-simple
    hs-source-dirs:   src-exe
