cabal-version:      3.0
name:               suppliers
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Hugo Ludemann
maintainer:         hugo.ludemann@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable suppliers
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0.0,
        postgresql-simple ^>= 0.7.0.0,
        fakedata ^>= 1.0.5,
        random,
        bytestring,
        text
    hs-source-dirs:   src-exe
    default-language: GHC2024
